--- a/App.config
+++ b/App.config
@@ -1,3 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GH_Toolkit_GUI.UserPreferences" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <GH_Toolkit_GUI.UserPreferences>
+            <setting name="PreviewFadeIn" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="PreviewFadeOut" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="Gh3BackupNag" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="GhaBackupNag" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </GH_Toolkit_GUI.UserPreferences>
+    </userSettings>
 </configuration>
