PC exclusive code

--- a/App.config
+++ b/App.config
@@ -13,11 +13,23 @@
             <setting name="PreviewFadeOut" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="Gh3BackupNag" serializeAs="String">
-                <value>True</value>
+            <setting name="Gh3QbPak" serializeAs="String">
+                <value />
             </setting>
-            <setting name="GhaBackupNag" serializeAs="String">
-                <value>True</value>
+            <setting name="Gh3QbPab" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GhaQbPak" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GhaQbPab" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Gh3ExePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GhaExePath" serializeAs="String">
+                <value />
             </setting>
         </GH_Toolkit_GUI.UserPreferences>
     </userSettings>
