--- a/App.config
+++ b/App.config
@@ -25,10 +25,10 @@
             <setting name="GhaQbPab" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Gh3ExePath" serializeAs="String">
+            <setting name="Gh3FolderPath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="GhaExePath" serializeAs="String">
+            <setting name="GhaFolderPath" serializeAs="String">
                 <value />
             </setting>
         </GH_Toolkit_GUI.UserPreferences>
