Add Settings Page

--- a/App.config
+++ b/App.config
@@ -31,6 +31,9 @@
             <setting name="GhaFolderPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ShowPostCompile" serializeAs="String">
+                <value>True</value>
+            </setting>
         </GH_Toolkit_GUI.UserPreferences>
     </userSettings>
 </configuration>
