--- a/UserPreferences.settings
+++ b/UserPreferences.settings
@@ -26,5 +26,8 @@
     <Setting Name="GhaFolderPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ShowPostCompile" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
