Create Settings for Compile a Song

--- a/App.config
+++ b/App.config
@@ -34,6 +34,9 @@
             <setting name="ShowPostCompile" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="WtModsFolder" serializeAs="String">
+                <value />
+            </setting>
         </GH_Toolkit_GUI.UserPreferences>
     </userSettings>
 </configuration>
