--- a/UserPreferences.settings
+++ b/UserPreferences.settings
@@ -29,5 +29,8 @@
     <Setting Name="ShowPostCompile" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="WtModsFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
