Adding Full Band Audio/Song Data + More Settings

--- a/App.config
+++ b/App.config
@@ -37,6 +37,12 @@
             <setting name="WtModsFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="EncryptAudio" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="OverrideBeatLines" serializeAs="String">
+                <value>True</value>
+            </setting>
         </GH_Toolkit_GUI.UserPreferences>
     </userSettings>
 </configuration>
