Start adding vocal parsing

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GH-Toolkit-GUI": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\RB\\Songs\\Dimmu Borgir\\Dimmu Borgir - The Sacrilegious Scorn (Jammit) (10 Tracks)\\sacriledgetest.ghproj\""
+      "commandLineArgs": "\"C:\\Charting\\Outlaws\\Compile\\GHWT\\greengrassreal_new.ghproj\""
     }
   }
 }
