--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GH-Toolkit-GUI": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\RB\\Songs\\Gojira\\Gojira - Our Time Is Now\\ourtimeisnow.ghproj\""
+      "commandLineArgs": "\"D:\\RB\\Songs\\Focus\\Compile\\addy_hocuspocus.ghproj\""
     }
   }
 }
