Add Onyx CLI support

--- a/App.config
+++ b/App.config
@@ -43,6 +43,9 @@
             <setting name="OverrideBeatLines" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="OnyxCliPath" serializeAs="String">
+                <value />
+            </setting>
         </GH_Toolkit_GUI.UserPreferences>
     </userSettings>
 </configuration>
