--- a/UserPreferences.settings
+++ b/UserPreferences.settings
@@ -38,5 +38,8 @@
     <Setting Name="OverrideBeatLines" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="OnyxCliPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
