Add items related to the songlist manager

--- a/App.config
+++ b/App.config
@@ -46,6 +46,9 @@
             <setting name="OnyxCliPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SongManagerDeleteSongs" serializeAs="String">
+                <value>True</value>
+            </setting>
         </GH_Toolkit_GUI.UserPreferences>
     </userSettings>
 </configuration>
