--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GH-Toolkit-GUI": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\RB\\Songs\\RB Recreations\\Starlight\\Compile\\starlight-wt-new.ghproj\""
+      "commandLineArgs": "\"D:\\RB\\Songs\\Testing\\Let Us Dance\\letusdance.ghproj\""
     }
   }
 }
