--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GH-Toolkit-GUI": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\RB\\Songs\\Hatsune Miku\\ievanpolkka.ghproj\""
+      "commandLineArgs": "\"D:\\RB\\Songs\\DragonForce\\Revolution DeathSquad RB\\Compile GH\\revodeath.ghproj\""
     }
   }
 }
